# portainer-mcp

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  DOCKER.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY_REVIEW.md  cloc.sh  go.mod  go.sum  pyproject.toml  token.sh  tools.yaml
.claude/skills/: portainer-mcp-hygiene
.cursor/rules/: integration-test.mdc
.github/workflows/: ci.yml  makefile.yml  mcpb-test.yml  release-docker.yml  release-mcpb.yml  release-test.yml  release.yml
cmd/portainer/: portainer.go
cmd/portainer-mcp/: mcp.go
cmd/token-count/: token.go
docs/: architecture.md  clients_and_models.md  configuration.md  design.md  design_summary.md  docker.md  production-readiness.md  profiles.md  proxy-tools.md  release.md  spec-upstream-fixes.md  versioning.md
docs/design/: 202503-1-external-tools-file.md  202503-2-tools-vs-mcp-resources.md  202503-3-specific-update-tools.md  202504-1-embedded-tools-yaml.md  202504-2-tools-yaml-versioning.md  202504-3-portainer-version-compatibility.md  202504-4-read-only-mode.md  202602-1-local-stack-support.md
docs/distribution/: claude-desktop.md
internal/k8sutil/: stripper.go  stripper_test.go
internal/mcp/: access_group.go  access_group_handlers.go  access_group_test.go  constants.go  docker.go  docker_test.go  environment.go  environment_handlers.go  environment_test.go  errors.go  group.go  group_test.go  handler.go  kubernetes.go  kubernetes_test.go  local_stack.go  local_stack_test.go  mocks_test.go  schema.go  schema_test.go  server.go  server_test.go  settings.go  settings_handlers.go  settings_test.go  stack.go  stack_handlers.go  stack_test.go  tag.go  tag_handlers.go  tag_test.go  team.go  team_handlers.go  team_test.go  user.go  user_handlers.go  user_test.go  utils.go  utils_test.go  yaml.go
internal/tooldef/: path.go  path_test.go  tooldef.go  tooldef_test.go  tools.yaml
packaging/mcpb/: build.sh  entry.py  manifest.json  portainer-mcp.spec
pkg/toolgen/: param.go  param_test.go  yaml.go  yaml_test.go
skills/portainer-mcp-hygiene/: SKILL.md
spec/: patch_spec.py  portainer-patched.yaml
src/portainer_mcp/: auth.py  auth_posture.py  guidance.py  http_security.py  passthrough.py  profiles.py  proxy.py  redaction.py  remote_auth.py  request_context.py  server.py  shaping.py  timeouts.py  tls.py
tests/: conftest.py  test_annotations.py  test_auth.py  test_auth_posture.py  test_guidance.py  test_http_security.py  test_logging.py  test_passthrough.py  test_patch_spec.py  test_profiles.py  test_proxy.py  test_redaction.py  test_remote_auth.py  test_request_context.py  test_server.py  test_shaping.py  test_timeouts.py  test_tls.py
tests/integration/: access_group_test.go  docker_test.go  (+9 more)
(+57 files in other folders)
