[project]
name = "portainer-mcp-fastmcp"
version = "0.0.1"
description = "Experimental Portainer MCP server bootstrapped from the Portainer OpenAPI spec via FastMCP."
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.8",
    "httpx>=0.27",
    "jmespath>=1.0",
    "pyyaml>=6.0",
]

[project.scripts]
portainer-mcp = "portainer_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/portainer_mcp"]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
