[project]
name = "mcp-portainer"
version = "2.42.5"
description = "Portainer MCP server — manage Docker, Kubernetes, stacks, and Helm via the Model Context Protocol."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.11"
dependencies = [
    "cryptography>=42",
    "fastmcp>=3.4.2,<4",
    "httpx>=0.27",
    "jmespath>=1.0",
    "pyyaml>=6.0",
]

[project.scripts]
mcp-portainer = "portainer_mcp.server:main"
portainer-mcp = "portainer_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/portainer_mcp"]

# Ship the hygiene skill as package data so the server can surface it as MCP
# instructions on every install method. SKILL.md stays the single source of
# truth — this only copies it into the wheel.
[tool.hatch.build.targets.wheel.force-include]
"skills/portainer-mcp-hygiene/SKILL.md" = "portainer_mcp/data/SKILL.md"

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
]
# Freezes the server into a standalone executable for the .mcpb binary bundle
# (packaging/mcpb). Not needed for the PyPI wheel or the container image.
mcpb = [
    "pyinstaller>=6.11",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
